# High-Load-Transactional-Systems

./: Kubernetes _ Compute Resources _ Pod-1714268337186.json  README.md  docker-compose.yml
BankingSystemC/: Dockerfile
BankingSystemC/src/: Account.h  AccountService.cpp  AccountService.h  KafkaTransactionListener.cpp  KafkaTransactionListener.h  TransactionManager.cpp  TransactionManager.h  main.cpp
BankingSystemCSharp/: BankingSystemCSharp.csproj  Dockerfile  Program.cs
BankingSystemCSharp/Models/: Account.cs  TransactionCommand.cs
BankingSystemCSharp/Services/: AccountService.cs  KafkaTransactionListener.cs  TransactionManager.cs
BankingSystemRust/: Cargo.toml  Dockerfile
BankingSystemRust/src/: account.rs  account_service.rs  kafka_transaction_listener.rs  main.rs  transaction_command.rs  transaction_manager.rs
Data/: cpu.py  memory.py  network.py
Data/C/: C++ CPU Usage-data.csv  C++ Memory Usage (WSS).csv  C++ Rate of Received Packets-data-2024-05-02 14_37_32.csv  C++ Rate of Transmitted Packets-data-2024-05-02 14_37_38.csv  C++ Receive Bandwidth-data-2024-05-02 14_37_23.csv  C++Memory Quota-data-2024-05-02 14_37_15.csv  C++Transmit Bandwidth-data-2024-05-02 14_37_28.csv
Data/Csharp/: C# CPU Usage-data.csv  C# Memory Quota-data-2024-05-02 17_27_24.csv  C# Memory Usage (WSS).csv  C# Rate of Received Packets-data-2024-05-02 17_27_43.csv  (+3 more)
K8/: kafkaMessageCounter-deployment.yaml
WorkloadGenerator/: Dockerfile  Program.cs  WorkloadGenerator.csproj
kafka_message_counter/: Cargo.toml  Dockerfile
kafka_message_counter/src/: main.rs
(+15 files in other folders)
