[package]
name = "kafka_message_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.26"
tokio = { version = "1", features = ["full", "macros"] }
log = "0.4"
env_logger = "0.9"
futures-util = "0.3.21" # Make sure this line is added
serde_json = "1.0"  # If you're deserializing JSON payloads
